# rva

./: .gitignore  COPYING  Makefile.am  README  configure.ac  make_testvideo.c  make_testvideo.sh  play_testvideo.sh  run_mediamtx.sh  rva.c  rvalib.c  rvalib.h  stream_testvideo.sh
ffmpeg/: .gitignore  Makefile  Makefile.am  README  test.c
